add seo and update readme

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -6,6 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="/favicon.png" type="image/png" />
   <title>Dao Preview</title>
+  <meta id="og:title" property="og:title" content="DAO Preview" />
+  <meta id="og:description" property="og:description" content="Info about your DAO in a cute image you can paste anywhere. Making DAOs more accessible." />
+  <meta id="description" name="description" content="Info about your DAO in a cute image you can paste anywhere. Making DAOs more accessible.">
+  <meta id="twitter:title" name="twitter:title" content="DAO Preview" />
+  <meta id="twitter:description" name="twitter:description" content="Info about your DAO in a cute image you can paste anywhere. Making DAOs more accessible." />
+  <meta id="og:url" property="og:url" content="https://daopreview.com"/>
+  <meta id="twitter:image" name="twitter:image" content="https://daopreview.com/seo.png" />
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta property="og:type" content="article" />
+  <meta name="keywords" content="dao, preview, state, accessible">
+  <meta name="author" content="DAO Preview">
+
   <script type="text/javascript">
     var _paq = window._paq || [];
     _paq.push(['trackPageView']);
